force-app/main/default/objects/Fortnite_Player_Stats__c/Fortnite_Player_Stats__c.object-meta.xml
<CustomObject>
    <label>Fortnite Player Stats</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fortnite Player Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>