force-app/main/default/objects/Fortnite_Player_Stats__c/fields/Fortnite_Player__c.field-meta.xml
<CustomField>
    <fullName>Fortnite_Player__c</fullName>
    <label>Fortnite Player</label>
    <referenceTo>Fortnite_Player__c</referenceTo>
    <relationshipLabel>stats</relationshipLabel>
    <relationshipName>Fortnite_Player_Stats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>