force-app/main/default/objects/Fortnite_Player_Stats__c/fields/gametype__c.field-meta.xml
<CustomField>
    <fullName>gametype__c</fullName>
    <description>The game type</description>
    <label>gametype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>solo</fullName>
            </value>
            <value>
                <fullName>duo</fullName>
            </value>
            <value>
                <fullName>squad</fullName>
            </value>
            <value>
                <fullName>ltm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>