force-app/main/default/objects/Fortnite_Player_Stats__c/fields/input__c.field-meta.xml
<CustomField>
    <fullName>input__c</fullName>
    <description>The input type</description>
    <label>input</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>touch</fullName>
            </value>
            <value>
                <fullName>gamepad</fullName>
            </value>
            <value>
                <fullName>keyboardmouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>