force-app/main/default/objects/Fortnite_Player_Stats__c/fields/kd__c.field-meta.xml
<CustomField>
    <fullName>kd__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>kd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>