force-app/main/default/objects/Fortnite_Player_Stats__c/fields/kills__c.field-meta.xml
<CustomField>
    <fullName>kills__c</fullName>
    <defaultValue>0</defaultValue>
    <label>kills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>