force-app/main/default/objects/Fortnite_Player_Stats__c/fields/placetop12__c.field-meta.xml
<CustomField>
    <fullName>placetop12__c</fullName>
    <defaultValue>0</defaultValue>
    <label>placetop12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>