force-app/main/default/objects/Fortnite_Player_Stats__c/fields/season__c.field-meta.xml
<CustomField>
    <fullName>season__c</fullName>
    <description>The season for the stat</description>
    <label>season</label>
    <length>8</length>
    <type>Text</type>
</CustomField>