force-app/main/default/objects/Fortnite_Player_Stats__c/fields/uid__c.field-meta.xml
<CustomField>
    <fullName>uid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The generated unique ID based on the player&apos;s uid, gametype, season, and input</description>
    <externalId>true</externalId>
    <label>uid</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>