force-app/main/default/objects/Fortnite_Player_Stats__c/fields/winrate__c.field-meta.xml
<CustomField>
    <fullName>winrate__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>winrate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>