force-app/main/default/objects/Fortnite_Player_Stats__c/listViews/Demo.listView-meta.xml
<ListView>
    <fullName>Demo</fullName>
    <columns>gametype__c</columns>
    <columns>input__c</columns>
    <columns>kd__c</columns>
    <columns>kills__c</columns>
    <columns>placetop1__c</columns>
    <columns>playersoutlived__c</columns>
    <columns>matchesplayed__c</columns>
    <columns>minutesplayed__c</columns>
    <filterScope>Mine</filterScope>
    <label>Demo</label>
</ListView>